target/classes/META-INF/jkube/openshift/clientelle-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-ref: master
    jkube.io/git-url: https://github.com/mmartofel/clientelle.git
    app.openshift.io/vcs-uri: https://github.com/mmartofel/clientelle.git
    jkube.io/git-commit: bb2f012dd60449f092028a11fbd6d53135da53e2
    jkube.io/git-branch: master
    jkube.io/scm-url: https://github.com/spring-projects/spring-boot/clientelle
    jkube.io/scm-tag: HEAD
  labels:
    app: clientelle
    provider: jkube
    version: 0.0.1-SNAPSHOT
    group: pl.bik
  name: clientelle
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: clientelle
